<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:persistent="true">

    <EditTextPreference
        android:key="dns"
        android:summary="@string/edit_dns_settings"
        android:title="@string/dns_settings"
        android:icon="@drawable/dns"/>

    <Preference
        android:key="export"
        android:title="导出"
        android:summary="@string/backup_koishi"
        android:icon="@drawable/database_export"/>

    <Preference
        android:key="import"
        android:title="导入"
        android:summary="@string/import_koishi"
        android:icon="@drawable/database_import"/>

    <Preference
        android:key="about"
        android:title="关于"
        android:icon="@drawable/about"/>

</PreferenceScreen>