<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F0F0">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_margin="30dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:srcCompat="@drawable/settings"
            android:onClick="onSettingsClick"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="-100dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="75dp">

            <ImageView
                android:layout_width="65dp"
                android:layout_height="65dp"
                app:srcCompat="@mipmap/ic_koishi_circle"
                android:contentDescription="@string/app_name"
                android:layout_marginEnd="30dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="60sp"/>
        </LinearLayout>

        <Button
            android:layout_width="190dp"
            android:layout_height="80dp"
            android:text="@string/manage_koishi"
            android:layout_marginBottom="50dp"
            android:background="@drawable/round_corner_button"
            android:onClick="onManageKoishiClick"/>

        <Button
            android:layout_width="190dp"
            android:layout_height="80dp"
            android:text="@string/start_webview"
            android:background="@drawable/round_corner_button"
            android:onClick="onStartWebViewClick" />

    </LinearLayout>

</LinearLayout>
